--- a/app_config.json
+++ b/app_config.json
@@ -6,6 +6,6 @@
   "app_settings": {
     "window_width": 1400,
     "window_height": 900,
-    "last_active_chat": "1"
+    "last_active_chat": "new"
   }
 }
