Better Bubble Text Rendering
1. text in execution_result exceeding 100 characters will be replaced by ...
2. changed newline character from `\n` to `<br>` for markdown rendering support
3. fixed bugs on markdown text renders whenever newline begins
4. Stop ai from repeating its answer in one request

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ chathistory/
 /.claude/
 /conversations/
 
+build/
+
+
 # Data directory - all chat data is stored here
 # Structure: data/{chat_name}/
 #   - settings.json: Chat settings (without API keys)
