--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "nuitka>=2.8.9",
     "openai>=2.14.0",
+    "pyinstaller>=6.18.0",
     "pyside6>=6.10.1",
     "pyyaml>=6.0.3",
     "requests>=2.32.5",
