--- a/app_config.json
+++ b/app_config.json
@@ -1,11 +1,13 @@
 {
   "chat_list": [
     "prefab_file_operator",
-    "chatsimply_chat"
+    "chatsimply_chat",
+    "ds",
+    "glm"
   ],
   "app_settings": {
     "window_width": 1400,
     "window_height": 900,
-    "last_active_chat": "prefab_file_operator"
+    "last_active_chat": "ds"
   }
 }
