--- a/app_config.json
+++ b/app_config.json
@@ -8,6 +8,6 @@
   "app_settings": {
     "window_width": 1400,
     "window_height": 900,
-    "last_active_chat": "ds"
+    "last_active_chat": "glm"
   }
 }
