--- a/app_config.json
+++ b/app_config.json
@@ -3,7 +3,8 @@
     "prefab_file_operator",
     "chatsimply_chat",
     "ds",
-    "glm"
+    "glm",
+    "对话_5"
   ],
   "app_settings": {
     "window_width": 1400,
