--- a/webui/tsconfig.json
+++ b/webui/tsconfig.json
@@ -30,6 +30,7 @@
       "@hooks/*": ["./src/hooks/*"],
       "@types/*": ["./src/types/*"],
       "@utils/*": ["./src/utils/*"],
+      "@i18n": ["./src/i18n"],
       "@i18n/*": ["./src/i18n/*"]
     }
   },
