--- a/app_config.json
+++ b/app_config.json
@@ -4,7 +4,8 @@
     "chatsimply_chat",
     "ds",
     "glm",
-    "file"
+    "file",
+    "20260127_175243"
   ],
   "app_settings": {
     "window_width": 1400,
