--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,10 @@ dependencies = [
     "openai>=2.14.0",
     "pyinstaller>=6.18.0",
     "pyside6>=6.10.1",
+    "python-multipart>=0.0.22",
     "pyyaml>=6.0.3",
     "requests>=2.32.5",
+    "sse-starlette>=3.2.0",
+    "uvicorn>=0.40.0",
     "zstandard>=0.25.0",
 ]
